--- a/3dkhi.html
+++ b/3dkhi.html
@@ -65,7 +65,7 @@ document.wafxScreenInfos =
 
 	
 
-	<link rel="stylesheet" href="3dkhi.css?a804a9a1_586b_41a2_97d6_6c1193688a9d_7"/>
+	<link rel="stylesheet" href="3dkhi.css?069f81cc_66ad_47b9_8e3d_05565249cd2b_7"/>
 
 	<style>
 
@@ -140,6 +140,9 @@ document.wafxScreenInfos =
 <li role="presentation" >
 <a class="wafx-menu-item wafxMenuPopupItem  wafxLink" role="menuitem" aria-haspopup="true">Movies<span>&nbsp;&#9662;</span></a>
 <ul class="wafx-menunid2 wafx-menu-frame" role="menu" >
+<li role="presentation" >
+<a class="wafx-menu-item " role="menuitem" href="./3dkhi.html"  >3D Kelvin-Helmholtz Instability</a>
+</li>
 <li role="presentation" >
 <a class="wafx-menu-item " role="menuitem" href="./2dsi.html"  >2D Streaming Instability</a>
 </li>
