--- a/cv.html
+++ b/cv.html
@@ -65,7 +65,7 @@ document.wafxScreenInfos =
 
 	
 
-	<link rel="stylesheet" href="cv.css?f633c02b_6505_4923_b751_9735aaa0a578_7"/>
+	<link rel="stylesheet" href="cv.css?cadecedc_a048_47f6_a2a5_e8b39568b5d5_7"/>
 
 	<style>
 
@@ -140,6 +140,9 @@ document.wafxScreenInfos =
 <li role="presentation" >
 <a class="wafx-menu-item wafxMenuPopupItem  wafxLink" role="menuitem" aria-haspopup="true">Movies<span>&nbsp;&#9662;</span></a>
 <ul class="wafx-menunid2 wafx-menu-frame" role="menu" >
+<li role="presentation" >
+<a class="wafx-menu-item " role="menuitem" href="./3dkhi.html"  >3D Kelvin-Helmholtz Instability</a>
+</li>
 <li role="presentation" >
 <a class="wafx-menu-item " role="menuitem" href="./2dsi.html"  >2D Streaming Instability</a>
 </li>
