--- a/group.html
+++ b/group.html
@@ -65,7 +65,7 @@ document.wafxScreenInfos =
 
 	
 
-	<link rel="stylesheet" href="group.css?94ed6628_f1f4_42d6_b1f7_39af44a0b5b1_7"/>
+	<link rel="stylesheet" href="group.css?5493fd49_14b4_4ce2_bb16_88aca0e91f4b_7"/>
 
 	<style>
 
@@ -140,6 +140,9 @@ document.wafxScreenInfos =
 <li role="presentation" >
 <a class="wafx-menu-item wafxMenuPopupItem  wafxLink" role="menuitem" aria-haspopup="true">Movies<span>&nbsp;&#9662;</span></a>
 <ul class="wafx-menunid2 wafx-menu-frame" role="menu" >
+<li role="presentation" >
+<a class="wafx-menu-item " role="menuitem" href="./3dkhi.html"  >3D Kelvin-Helmholtz Instability</a>
+</li>
 <li role="presentation" >
 <a class="wafx-menu-item " role="menuitem" href="./2dsi.html"  >2D Streaming Instability</a>
 </li>
