--- a/research.html
+++ b/research.html
@@ -65,7 +65,7 @@ document.wafxScreenInfos =
 
 	
 
-	<link rel="stylesheet" href="research.css?dcae5892_96ad_4489_8c35_b2d47ef76644_7"/>
+	<link rel="stylesheet" href="research.css?5f5fc686_c093_4bfc_bf81_e457f1cb94a6_7"/>
 
 	<style>
 
@@ -140,6 +140,9 @@ document.wafxScreenInfos =
 <li role="presentation" >
 <a class="wafx-menu-item wafxMenuPopupItem  wafxLink" role="menuitem" aria-haspopup="true">Movies<span>&nbsp;&#9662;</span></a>
 <ul class="wafx-menunid2 wafx-menu-frame" role="menu" >
+<li role="presentation" >
+<a class="wafx-menu-item " role="menuitem" href="./3dkhi.html"  >3D Kelvin-Helmholtz Instability</a>
+</li>
 <li role="presentation" >
 <a class="wafx-menu-item " role="menuitem" href="./2dsi.html"  >2D Streaming Instability</a>
 </li>
