--- a/mriturb.html
+++ b/mriturb.html
@@ -65,7 +65,7 @@ document.wafxScreenInfos =
 
 	
 
-	<link rel="stylesheet" href="mriturb.css?f207c597_585a_4c85_ba00_0a11c5e0cf9d_7"/>
+	<link rel="stylesheet" href="mriturb.css?64f8c377_0909_4ebe_acfb_038af06fb128_7"/>
 
 	<style>
 
@@ -140,6 +140,9 @@ document.wafxScreenInfos =
 <li role="presentation" >
 <a class="wafx-menu-item wafxMenuPopupItem  wafxLink" role="menuitem" aria-haspopup="true">Movies<span>&nbsp;&#9662;</span></a>
 <ul class="wafx-menunid2 wafx-menu-frame" role="menu" >
+<li role="presentation" >
+<a class="wafx-menu-item " role="menuitem" href="./3dkhi.html"  >3D Kelvin-Helmholtz Instability</a>
+</li>
 <li role="presentation" >
 <a class="wafx-menu-item " role="menuitem" href="./2dsi.html"  >2D Streaming Instability</a>
 </li>
