--- a/teaching.html
+++ b/teaching.html
@@ -65,7 +65,7 @@ document.wafxScreenInfos =
 
 	
 
-	<link rel="stylesheet" href="teaching.css?f15398c4_2669_416f_b827_6962835f9403_7"/>
+	<link rel="stylesheet" href="teaching.css?1d83f2b4_071b_4d7a_a0c9_85e563af646c_7"/>
 
 	<style>
 
@@ -202,7 +202,7 @@ document.wafxScreenInfos =
 <p>&nbsp;</p>
 <p><span class="t12"  >Next semester to teach this course: Spring 2021</span>&nbsp;</p>
 <p><span class="t13"  > </span>&nbsp;</p>
-<p><span class="t14"  >Class materials/references:  Lecture Notes on GitHub, Computational Physics: Problem Solving with Python (Landau et al.)</span>&nbsp;</p></div></div>
+<p><span class="t14"  >Class materials/references: <a href="https://www.wiley.com/en-us/Computational+Physics%3A+Problem+Solving+with+Pythontarget="_blank" C+3rd+Edition-p-9783527413157" target="_blank"  style="text-decoration: underline;"> Computational Physics: Problem Solving with Python (Landau et al.)</a></span>&nbsp;</p></div></div>
 <div class="compVis_14"><div class='comp_14'  title=""><img  class="wafx-img-picture" src="./wafx_res/Images/0-7-689289.gif" alt=""></div></div>
 <div class="compVis_15"><div class='comp_15'  title=""><img  class="wafx-img-picture" src="./wafx_res/Images/0-7-689289.gif" alt=""></div></div>
 <div class="compVis_16"><div class='comp_16'  title=""><img  class="wafx-img-picture" src="./wafx_res/Images/0-7-689289.gif" alt=""></div></div>
@@ -212,12 +212,12 @@ document.wafxScreenInfos =
 <p>&nbsp;</p>
 <p>&nbsp;</p></div></div>
 <div class="compVis_19"><div class='comp_19'  title=""><img  class="wafx-img-picture" src="./wafx_res/Images/0-340-planetesimals.jpg" alt=""></div></div>
-<div class="compVis_20"><div  class='comp_20 wafxText '><div class='textShape_1024' style='height:5px;'></div><p><span class="t16"  >Course theme: A survey of astronomy for the non-scientist, with a focus on the universe beyond our solar system: stars, black holes, galaxies, cosmology, life in the universe. </span>&nbsp;</p>
+<div class="compVis_20"><div class='comp_20'  title=""><img  class="wafx-img-picture" src="./wafx_res/Images/0-7-689289.gif" alt=""></div></div>
+<div class="compVis_21"><div  class='comp_21 wafxText '><div class='textShape_1024' style='height:5px;'></div><p><span class="t16"  >Course theme: A survey of astronomy for the non-scientist, with a focus on the universe beyond our solar system: stars, black holes, galaxies, cosmology, life in the universe. </span>&nbsp;</p>
 <p><span class="t17"  ></span>&nbsp;</p>
 <p><span class="t18"  >Next semester to teach this course: Fall 2020</span>&nbsp;</p>
 <p><span class="t19"  > </span>&nbsp;</p>
-<p><span class="t20"  >Class materials/references: under development</span>&nbsp;</p></div></div>
-<div class="compVis_21"><div class='comp_21'  title=""><img  class="wafx-img-picture" src="./wafx_res/Images/0-7-689289.gif" alt=""></div></div>
+<p><span class="t20"  >Class materials/references: <a href="https://openstax.org/details/books/astronomy" target="_blank"  style="text-decoration: underline;">Openstax Astronomy</a> (free and online)</span>&nbsp;</p></div></div>
 
 
 
