--- a/2dkhi.html
+++ b/2dkhi.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
 	<meta charset="utf-8">
-	<title>Page sans titre</title>
+	<title>2D Kelvin-Helmholtz Instability</title>
         
 	<meta name="description" content=""/>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
@@ -65,7 +65,7 @@ document.wafxScreenInfos =
 
 	
 
-	<link rel="stylesheet" href="2dkhi.css?3477ba1b_375e_4745_b094_09fdcf7d7d27_7"/>
+	<link rel="stylesheet" href="2dkhi.css?251f6762_e508_4690_a06a_ba24d860509d_7"/>
 
 	<style>
 
