--- a/2dsi.html
+++ b/2dsi.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
 	<meta charset="utf-8">
-	<title>Page sans titre</title>
+	<title>2D Streaming Instability</title>
         
 	<meta name="description" content=""/>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
@@ -65,7 +65,7 @@ document.wafxScreenInfos =
 
 	
 
-	<link rel="stylesheet" href="2dsi.css?46c140de_8cd9_427a_813d_6da2031f1f55_7"/>
+	<link rel="stylesheet" href="2dsi.css?ff8419d3_0c62_42a5_990e_dc1e8c6ca0f5_7"/>
 
 	<style>
 
