--- a/sgdisk.html
+++ b/sgdisk.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
 	<meta charset="utf-8">
-	<title>Page sans titre</title>
+	<title>Self-Gravitating Disk</title>
         
 	<meta name="description" content=""/>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
@@ -65,7 +65,7 @@ document.wafxScreenInfos =
 
 	
 
-	<link rel="stylesheet" href="sgdisk.css?b3e1540e_4545_428a_a071_3f98b8053455_7"/>
+	<link rel="stylesheet" href="sgdisk.css?daf19f25_5d58_4290_a232_9cc058a068de_7"/>
 
 	<style>
 
