--- a/3dsi2.html
+++ b/3dsi2.html
@@ -65,7 +65,7 @@ document.wafxScreenInfos =
 
 	
 
-	<link rel="stylesheet" href="3dsi2.css?1266d0b7_c0ed_4598_89f0_988ae014ea35_7"/>
+	<link rel="stylesheet" href="3dsi2.css?940e4c35_65ee_4a75_8123_5b37b3573670_7"/>
 
 	<style>
 
@@ -192,7 +192,7 @@ document.wafxScreenInfos =
 </div></div>
 <div class="compVis_10"><div  class='comp_10 wafxText '><div class='textShape_1024' style='height:5px;'></div><p><span class="t7"  >3D Streaming Instability 2</span>&nbsp;</p>
 <p><span class="t8"  ></span>&nbsp;</p>
-<p style="text-align: justify;"><span class="t9"  >Evolution of the streaming instability in a 3D local disk patch (x direction is radial, y direction is azimuthal); here, radial filaments have already formed (see this <a href="./3dsi1.html"  style="text-decoration: underline;">movie</a>), and the movie shows the gravitational collapse of these filaments into planetesimals. </span>&nbsp;</p></div></div>
+<p style="text-align: justify;"><span class="t9"  >Evolution of the streaming instability in a 3D local disk patch (x direction is radial, y direction is azimuthal); here, radial filaments have already formed (see this <a href="./3dsi1.html"  style="text-decoration: underline;">movie</a>), and the movie shows the gravitational collapse of these filaments into planetesimals.  <span class="t10"  >(This movie created by <a href="https://lavinia.as.arizona.edu/~rixin/" target="_blank"  style="text-decoration: underline;">Rixin Li</a>)</span></span>&nbsp;</p></div></div>
 
 
 
