--- a/3dsi1.html
+++ b/3dsi1.html
@@ -65,7 +65,7 @@ document.wafxScreenInfos =
 
 	
 
-	<link rel="stylesheet" href="3dsi1.css?19426f01_5b5b_48ae_9b1a_b5b53c04fdcb_7"/>
+	<link rel="stylesheet" href="3dsi1.css?c1a68e59_d4c1_4231_94e2_5463b33f8796_7"/>
 
 	<style>
 
@@ -189,9 +189,7 @@ document.wafxScreenInfos =
 <div class="compVis_9"><div  class='comp_9 wafxText '><div class='textShape_1024' style='height:5px;'></div><p><span class="t7"  >3D Streaming Instability 1</span>&nbsp;</p>
 <p><span class="t8"  ></span>&nbsp;</p>
 <p><span class="t9"  >Evolution of the streaming instability in a 3D local disk patch (x direction is radial, y direction is azimuthal) The movie shows particle density. As the instability progresses, radial filaments form (which is absent in the <a href="./2dsi.html"  style="text-decoration: underline;">2D unstratified case</a>) , which eventually give birth to gravitationally bound planetesimals. </span>&nbsp;</p></div></div>
-<div class="compVis_10"><div  class='comp_10'><video style="width:100%;height:100%" controls="controls">
-<source src="./wafx_res/Files/Streaming Instability Simulations - Pi %3D 0.0751.mp4" type=video/mp4>
-</video>
+<div class="compVis_10"><div  class='comp_10'><iframe style="width:100%;height:100%;border:0px;"  src="//www.youtube.com/embed/fganltwylwk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"  allowfullscreen></iframe>
 </div></div>
 
 
