--- a/teaching.html
+++ b/teaching.html
@@ -65,7 +65,7 @@ document.wafxScreenInfos =
 
 	
 
-	<link rel="stylesheet" href="teaching.css?49633ff3_a1c1_480d_b481_4278ac4478a2_7"/>
+	<link rel="stylesheet" href="teaching.css?991c4900_e308_4622_8949_a8c51a3ac824_7"/>
 
 	<style>
 
@@ -202,7 +202,7 @@ document.wafxScreenInfos =
 <p>&nbsp;</p>
 <p><span class="t12"  >Next semester to teach this course: Spring 2021</span>&nbsp;</p>
 <p><span class="t13"  > </span>&nbsp;</p>
-<p><span class="t14"  >Class materials/references: <a href="https://www.wiley.com/en-us/Computational+Physics%3A+Problem+Solving+with+Pythontarget="_blank" C+3rd+Edition-p-9783527413157" target="_blank"  style="text-decoration: underline;"> Computational Physics: Problem Solving with Python (Landau et al.)</a></span>&nbsp;</p></div></div>
+<p><span class="t14"  >Class materials/references: <a href="https://www.google.com/search?ei=gApuX6mqEteztQbaupbQCQ&q=computational+physics+in+python+landau+&oq=computational+physics+in+python+landau+&gs_lcp=CgZwc3ktYWIQAzIGCAAQFhAeMgYIABAWEB46BAgAEEc6AggAUOYOWP0ZYOEdaABwAXgAgAFeiAGkBZIBATiYAQCgAQGqAQdnd3Mtd2l6yAEIwAEB&sclient=psy-ab&ved=0ahUKEwip6vC9zYTsAhXXWc0KHVqdBZoQ4dUDCAw&uact=5" target="_blank"  style="text-decoration: underline;">Computational Physics: Problem Solving with Python (Landau et al.)</a></span>&nbsp;</p></div></div>
 <div class="compVis_14"><div class='comp_14'  title=""><img  class="wafx-img-picture" src="./wafx_res/Images/0-7-689289.gif" alt=""></div></div>
 <div class="compVis_15"><div class='comp_15'  title=""><img  class="wafx-img-picture" src="./wafx_res/Images/0-7-689289.gif" alt=""></div></div>
 <div class="compVis_16"><div class='comp_16'  title=""><img  class="wafx-img-picture" src="./wafx_res/Images/0-7-689289.gif" alt=""></div></div>
