--- a/3dkhi.html
+++ b/3dkhi.html
@@ -65,7 +65,7 @@ document.wafxScreenInfos =
 
 	
 
-	<link rel="stylesheet" href="3dkhi.css?16076467_0f37_4fea_a5e4_29cb00184d30_7"/>
+	<link rel="stylesheet" href="3dkhi.css?c086adf7_ac8f_4c21_801f_5d8ab462dbd9_7"/>
 
 	<style>
 
@@ -188,10 +188,8 @@ document.wafxScreenInfos =
 <h3 class="waStyle-b6cd58d0-1379-4fdb-98e4-f8b73e927107"><span class="t6"   > Iowa State University</span></h3></div></div>
 <div class="compVis_9"><div  class='comp_9 wafxText '><div class='textShape_1024' style='height:5px;'></div><p><span class="t7"  >3D Kelvin-Helmholtz Instability</span>&nbsp;</p>
 <p><span class="t8"  ></span>&nbsp;</p>
-<p style="text-align: justify;"><span class="t9"  >Rendering of the Kelvin-Helmholtz Instability in 3D, part of a project done by my former graduate student, <a href="http://web.physics.ucsb.edu/~greg/" target="_blank"  style="text-decoration: underline;">Greg Salvesen</a>. The 3D density rendering was created by <a href="https://github.com/samskillman" target="_blank"  style="text-decoration: underline;">Sam Skillman</a>. The first movie shows gas density, and the second movie shows magnetic field strength.</span>&nbsp;</p></div></div>
-<div class="compVis_10"><div  class='comp_10'><video style="width:100%;height:100%" controls="controls">
-<source src="./wafx_res/Files/3D Rendering of KHI.mp4" type=video/mp4>
-</video>
+<p style="text-align: justify;"><span class="t9"  >Rendering of the Kelvin-Helmholtz Instability in 3D, part of a project done by my former graduate student, <a href="http://web.physics.ucsb.edu/~greg/" target="_blank"  style="text-decoration: underline;">Greg Salvesen</a>. The 3D density rendering was created by <a href="https://github.com/samskillman" target="_blank"  style="text-decoration: underline;">Sam Skillman</a>. The first movie shows gas density, and the second movie shows magnetic field strength. The very end includes a very high resolution 2D version of the same instability.</span>&nbsp;</p></div></div>
+<div class="compVis_10"><div  class='comp_10'><iframe style="width:100%;height:100%;border:0px;"  src="//www.youtube.com/embed/Rvczh0jfKNE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"  allowfullscreen></iframe>
 </div></div>
 
 
