--- a/2dkhi.html
+++ b/2dkhi.html
@@ -65,7 +65,7 @@ document.wafxScreenInfos =
 
 	
 
-	<link rel="stylesheet" href="2dkhi.css?9559758b_480a_4841_846f_144361ba5f26_7"/>
+	<link rel="stylesheet" href="2dkhi.css?29d54392_2984_4183_822c_f748b46d7780_7"/>
 
 	<style>
 
@@ -151,6 +151,9 @@ document.wafxScreenInfos =
 </li>
 <li role="presentation" >
 <a class="wafx-menu-item " role="menuitem" href="./mriturb.html"  >Magnetorotational Instability Turbulence</a>
+</li>
+<li role="presentation" >
+<a class="wafx-menu-item " role="menuitem" href="./pressure_bump.html"  >Planetesimal Formation in a Pressure Bump</a>
 </li>
 <li role="presentation" >
 <a class="wafx-menu-item " role="menuitem" href="./2dkhi.html"  >2D Kelvin-Helmholtz Instability</a>
