--- a/2drti.html
+++ b/2drti.html
@@ -65,7 +65,7 @@ document.wafxScreenInfos =
 
 	
 
-	<link rel="stylesheet" href="2drti.css?fe7eec0e_84b6_4944_a5ad_1acb8cb0cf12_7"/>
+	<link rel="stylesheet" href="2drti.css?4844ea66_e27c_480e_bb16_18a319493dff_7"/>
 
 	<style>
 
@@ -151,6 +151,9 @@ document.wafxScreenInfos =
 </li>
 <li role="presentation" >
 <a class="wafx-menu-item " role="menuitem" href="./mriturb.html"  >Magnetorotational Instability Turbulence</a>
+</li>
+<li role="presentation" >
+<a class="wafx-menu-item " role="menuitem" href="./pressure_bump.html"  >Planetesimal Formation in a Pressure Bump</a>
 </li>
 <li role="presentation" >
 <a class="wafx-menu-item " role="menuitem" href="./2dkhi.html"  >2D Kelvin-Helmholtz Instability</a>
