--- a/3dkhi.html
+++ b/3dkhi.html
@@ -65,7 +65,7 @@ document.wafxScreenInfos =
 
 	
 
-	<link rel="stylesheet" href="3dkhi.css?6f149f9a_ac7d_4e55_a57f_2329b7c47d01_7"/>
+	<link rel="stylesheet" href="3dkhi.css?0fb29933_6872_4f78_9712_aeea2c057aed_7"/>
 
 	<style>
 
@@ -151,6 +151,9 @@ document.wafxScreenInfos =
 </li>
 <li role="presentation" >
 <a class="wafx-menu-item " role="menuitem" href="./mriturb.html"  >Magnetorotational Instability Turbulence</a>
+</li>
+<li role="presentation" >
+<a class="wafx-menu-item " role="menuitem" href="./pressure_bump.html"  >Planetesimal Formation in a Pressure Bump</a>
 </li>
 <li role="presentation" >
 <a class="wafx-menu-item " role="menuitem" href="./2dkhi.html"  >2D Kelvin-Helmholtz Instability</a>
