--- a/3dsi1.html
+++ b/3dsi1.html
@@ -65,7 +65,7 @@ document.wafxScreenInfos =
 
 	
 
-	<link rel="stylesheet" href="3dsi1.css?07a47c64_210f_4ef8_9d45_ae00a6869c4f_7"/>
+	<link rel="stylesheet" href="3dsi1.css?89258edf_787c_495d_ae65_933674539556_7"/>
 
 	<style>
 
@@ -151,6 +151,9 @@ document.wafxScreenInfos =
 </li>
 <li role="presentation" >
 <a class="wafx-menu-item " role="menuitem" href="./mriturb.html"  >Magnetorotational Instability Turbulence</a>
+</li>
+<li role="presentation" >
+<a class="wafx-menu-item " role="menuitem" href="./pressure_bump.html"  >Planetesimal Formation in a Pressure Bump</a>
 </li>
 <li role="presentation" >
 <a class="wafx-menu-item " role="menuitem" href="./2dkhi.html"  >2D Kelvin-Helmholtz Instability</a>
