--- a/sgdisk.html
+++ b/sgdisk.html
@@ -65,7 +65,7 @@ document.wafxScreenInfos =
 
 	
 
-	<link rel="stylesheet" href="sgdisk.css?75531b59_115b_4174_bda7_e202da2c10b1_7"/>
+	<link rel="stylesheet" href="sgdisk.css?a6c49941_ae23_483b_9f31_771515878d39_7"/>
 
 	<style>
 
@@ -151,6 +151,9 @@ document.wafxScreenInfos =
 </li>
 <li role="presentation" >
 <a class="wafx-menu-item " role="menuitem" href="./mriturb.html"  >Magnetorotational Instability Turbulence</a>
+</li>
+<li role="presentation" >
+<a class="wafx-menu-item " role="menuitem" href="./pressure_bump.html"  >Planetesimal Formation in a Pressure Bump</a>
 </li>
 <li role="presentation" >
 <a class="wafx-menu-item " role="menuitem" href="./2dkhi.html"  >2D Kelvin-Helmholtz Instability</a>
