--- a/pressure_bump.html
+++ b/pressure_bump.html
@@ -65,7 +65,7 @@ document.wafxScreenInfos =
 
 	
 
-	<link rel="stylesheet" href="pressure_bump.css?270e249f_6980_423f_b4e6_bd5a92a400eb_7"/>
+	<link rel="stylesheet" href="pressure_bump.css?d7edb385_de03_4376_b8ab_68597e4a136f_7"/>
 
 	<style>
 
@@ -191,10 +191,8 @@ document.wafxScreenInfos =
 <h3 class="waStyle-b6cd58d0-1379-4fdb-98e4-f8b73e927107"><span class="t6"   > Iowa State University</span></h3></div></div>
 <div class="compVis_9"><div  class='comp_9 wafxText '><div class='textShape_1024' style='height:5px;'></div><p><span class="t7"  ><b>Planetesimal Formation in a Pressure Bump</b></span>&nbsp;</p>
 <p><span class="t8"  ><b></b></span>&nbsp;</p>
-<p style="text-align: justify;"><span class="t9"  >In this simulation, which was done as part of <a href="https://ui.adsabs.harvard.edu/abs/2020arXiv200801727Ctarget="_blank" Fabstracttarget="_blank" F/abstract" target="_blank"  style="text-decoration: underline;">Carrera et al. 2020</a>, particles drift toward the star and encounter a pressure bump (centered on x = 0, but due to the background pressure gradient, the point of minimum drift is around x = -1.2H).  The particles slow down as they enter the minimum drift point, which causes their local density to increase, pushing them into the streaming unstable regime.  Planetesimal formation follows soon thereafter.</span>&nbsp;</p></div></div>
-<div class="compVis_10"><div  class='comp_10'><video style="width:100%;height:100%" controls="controls">
-<source src="./wafx_res/Files/Pressure Bump Planetesimal Formation.mp4" type=video/mp4>
-</video>
+<p style="text-align: justify;"><span class="t9"  >In this simulation, which was done as part of <a href="https://ui.adsabs.harvard.edu/abs/2020arXiv200801727C/abstract" target="_blank"  style="text-decoration: underline;">Carrera et al. 2020</a>, particles drift toward the star and encounter a pressure bump (centered on x = 0, but due to the background pressure gradient, the point of minimum drift is around x = -1.2H).  The particles slow down as they enter the minimum drift point, which causes their local density to increase, pushing them into the streaming unstable regime.  Planetesimal formation follows soon thereafter.</span>&nbsp;</p></div></div>
+<div class="compVis_10"><div  class='comp_10'><iframe style="width:100%;height:100%;border:0px;"  src="//www.youtube.com/embed/gyhcBvxnr_A" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"  allowfullscreen></iframe>
 </div></div>
 
 
