--- a/2dkhi.html
+++ b/2dkhi.html
@@ -65,7 +65,7 @@ document.wafxScreenInfos =
 
 	
 
-	<link rel="stylesheet" href="2dkhi.css?dfba9393_1d70_41bc_8eae_2596a386d4a9_7"/>
+	<link rel="stylesheet" href="2dkhi.css?845cf9ef_0bc5_4149_9cf8_1f98010cd3d2_7"/>
 
 	<style>
 
@@ -172,6 +172,9 @@ document.wafxScreenInfos =
 </li>
 <li role="presentation" >
 <a class="wafx-menu-item " role="menuitem" href="./bowshock.html"  >Bow Shock</a>
+</li>
+<li role="presentation" >
+<a class="wafx-menu-item " role="menuitem" href="./planetarium.html"  >Planetarium Show Short</a>
 </li>
 </ul>
 </li>
