--- a/2drti.html
+++ b/2drti.html
@@ -65,7 +65,7 @@ document.wafxScreenInfos =
 
 	
 
-	<link rel="stylesheet" href="2drti.css?befd919b_ff4f_40c1_b32b_a6d4f6482892_7"/>
+	<link rel="stylesheet" href="2drti.css?4606d8c1_9ab7_4e34_96f0_e18268eddf25_7"/>
 
 	<style>
 
@@ -172,6 +172,9 @@ document.wafxScreenInfos =
 </li>
 <li role="presentation" >
 <a class="wafx-menu-item " role="menuitem" href="./bowshock.html"  >Bow Shock</a>
+</li>
+<li role="presentation" >
+<a class="wafx-menu-item " role="menuitem" href="./planetarium.html"  >Planetarium Show Short</a>
 </li>
 </ul>
 </li>
