--- a/3dkhi.html
+++ b/3dkhi.html
@@ -65,7 +65,7 @@ document.wafxScreenInfos =
 
 	
 
-	<link rel="stylesheet" href="3dkhi.css?e5a00c92_3da9_40bf_8469_6dc7be0a8819_7"/>
+	<link rel="stylesheet" href="3dkhi.css?d538308c_a5f2_485b_9b80_e42656a89f79_7"/>
 
 	<style>
 
@@ -172,6 +172,9 @@ document.wafxScreenInfos =
 </li>
 <li role="presentation" >
 <a class="wafx-menu-item " role="menuitem" href="./bowshock.html"  >Bow Shock</a>
+</li>
+<li role="presentation" >
+<a class="wafx-menu-item " role="menuitem" href="./planetarium.html"  >Planetarium Show Short</a>
 </li>
 </ul>
 </li>
