--- a/3dsi1.html
+++ b/3dsi1.html
@@ -65,7 +65,7 @@ document.wafxScreenInfos =
 
 	
 
-	<link rel="stylesheet" href="3dsi1.css?059cffc6_3d91_4d15_95b6_b1fa3688a5e6_7"/>
+	<link rel="stylesheet" href="3dsi1.css?9d0f90d9_3845_4baa_a578_5d83bad87379_7"/>
 
 	<style>
 
@@ -172,6 +172,9 @@ document.wafxScreenInfos =
 </li>
 <li role="presentation" >
 <a class="wafx-menu-item " role="menuitem" href="./bowshock.html"  >Bow Shock</a>
+</li>
+<li role="presentation" >
+<a class="wafx-menu-item " role="menuitem" href="./planetarium.html"  >Planetarium Show Short</a>
 </li>
 </ul>
 </li>
