--- a/3dsi2.html
+++ b/3dsi2.html
@@ -65,7 +65,7 @@ document.wafxScreenInfos =
 
 	
 
-	<link rel="stylesheet" href="3dsi2.css?4079de5f_0ec8_4ab8_b3b8_1574f5938ad3_7"/>
+	<link rel="stylesheet" href="3dsi2.css?411bc8d0_e7fe_423d_890e_473ccffd23a1_7"/>
 
 	<style>
 
@@ -172,6 +172,9 @@ document.wafxScreenInfos =
 </li>
 <li role="presentation" >
 <a class="wafx-menu-item " role="menuitem" href="./bowshock.html"  >Bow Shock</a>
+</li>
+<li role="presentation" >
+<a class="wafx-menu-item " role="menuitem" href="./planetarium.html"  >Planetarium Show Short</a>
 </li>
 </ul>
 </li>
