--- a/bowshock.html
+++ b/bowshock.html
@@ -65,7 +65,7 @@ document.wafxScreenInfos =
 
 	
 
-	<link rel="stylesheet" href="bowshock.css?11998fd4_7382_470c_9071_a0048c8f5298_7"/>
+	<link rel="stylesheet" href="bowshock.css?ed7a9058_255b_44c7_adc4_45ef44ac6853_7"/>
 
 	<style>
 
@@ -172,6 +172,9 @@ document.wafxScreenInfos =
 </li>
 <li role="presentation" >
 <a class="wafx-menu-item " role="menuitem" href="./bowshock.html"  >Bow Shock</a>
+</li>
+<li role="presentation" >
+<a class="wafx-menu-item " role="menuitem" href="./planetarium.html"  >Planetarium Show Short</a>
 </li>
 </ul>
 </li>
