--- a/cv.html
+++ b/cv.html
@@ -65,7 +65,7 @@ document.wafxScreenInfos =
 
 	
 
-	<link rel="stylesheet" href="cv.css?1bda44e6_ddbc_4480_9983_b72eb01259ed_7"/>
+	<link rel="stylesheet" href="cv.css?5b43f0d1_4b85_49cd_9e49_d7da1371e3c3_7"/>
 
 	<style>
 
@@ -172,6 +172,9 @@ document.wafxScreenInfos =
 </li>
 <li role="presentation" >
 <a class="wafx-menu-item " role="menuitem" href="./bowshock.html"  >Bow Shock</a>
+</li>
+<li role="presentation" >
+<a class="wafx-menu-item " role="menuitem" href="./planetarium.html"  >Planetarium Show Short</a>
 </li>
 </ul>
 </li>
