--- a/group.html
+++ b/group.html
@@ -65,7 +65,7 @@ document.wafxScreenInfos =
 
 	
 
-	<link rel="stylesheet" href="group.css?40820802_573e_4b4d_8860_0281f1b4ade5_7"/>
+	<link rel="stylesheet" href="group.css?d09ff85e_54cd_4b64_a792_c1dbbf5ef6ce_7"/>
 
 	<style>
 
@@ -172,6 +172,9 @@ document.wafxScreenInfos =
 </li>
 <li role="presentation" >
 <a class="wafx-menu-item " role="menuitem" href="./bowshock.html"  >Bow Shock</a>
+</li>
+<li role="presentation" >
+<a class="wafx-menu-item " role="menuitem" href="./planetarium.html"  >Planetarium Show Short</a>
 </li>
 </ul>
 </li>
