--- a/pressure_bump.html
+++ b/pressure_bump.html
@@ -65,7 +65,7 @@ document.wafxScreenInfos =
 
 	
 
-	<link rel="stylesheet" href="pressure_bump.css?7980d308_a4bf_4d2e_92c3_aa0c4fe71886_7"/>
+	<link rel="stylesheet" href="pressure_bump.css?b3d85288_ffe5_48c0_82af_9c1029feec49_7"/>
 
 	<style>
 
@@ -172,6 +172,9 @@ document.wafxScreenInfos =
 </li>
 <li role="presentation" >
 <a class="wafx-menu-item " role="menuitem" href="./bowshock.html"  >Bow Shock</a>
+</li>
+<li role="presentation" >
+<a class="wafx-menu-item " role="menuitem" href="./planetarium.html"  >Planetarium Show Short</a>
 </li>
 </ul>
 </li>
