--- a/sgdisk.html
+++ b/sgdisk.html
@@ -65,7 +65,7 @@ document.wafxScreenInfos =
 
 	
 
-	<link rel="stylesheet" href="sgdisk.css?fd556844_0965_4da4_80a5_62d3ec8471ba_7"/>
+	<link rel="stylesheet" href="sgdisk.css?a0d2fc37_b40a_4f77_998c_541c239b1ac7_7"/>
 
 	<style>
 
@@ -172,6 +172,9 @@ document.wafxScreenInfos =
 </li>
 <li role="presentation" >
 <a class="wafx-menu-item " role="menuitem" href="./bowshock.html"  >Bow Shock</a>
+</li>
+<li role="presentation" >
+<a class="wafx-menu-item " role="menuitem" href="./planetarium.html"  >Planetarium Show Short</a>
 </li>
 </ul>
 </li>
