--- a/teaching.html
+++ b/teaching.html
@@ -65,7 +65,7 @@ document.wafxScreenInfos =
 
 	
 
-	<link rel="stylesheet" href="teaching.css?5c47bef4_5c23_4d87_83df_1a720dfb47bb_7"/>
+	<link rel="stylesheet" href="teaching.css?460c6aee_3675_4e2c_a404_a8597187abe2_7"/>
 
 	<style>
 
@@ -172,6 +172,9 @@ document.wafxScreenInfos =
 </li>
 <li role="presentation" >
 <a class="wafx-menu-item " role="menuitem" href="./bowshock.html"  >Bow Shock</a>
+</li>
+<li role="presentation" >
+<a class="wafx-menu-item " role="menuitem" href="./planetarium.html"  >Planetarium Show Short</a>
 </li>
 </ul>
 </li>
