--- a/2dsi.html
+++ b/2dsi.html
@@ -65,7 +65,7 @@ document.wafxScreenInfos =
 
 	
 
-	<link rel="stylesheet" href="2dsi.css?070ad02e_fb08_4a08_8b0e_d7995bfee297_7"/>
+	<link rel="stylesheet" href="2dsi.css?4fcec122_2b67_456e_a163_5bd6411c360a_7"/>
 
 	<style>
 
@@ -172,6 +172,9 @@ document.wafxScreenInfos =
 </li>
 <li role="presentation" >
 <a class="wafx-menu-item " role="menuitem" href="./bowshock.html"  >Bow Shock</a>
+</li>
+<li role="presentation" >
+<a class="wafx-menu-item " role="menuitem" href="./planetarium.html"  >Planetarium Show Short</a>
 </li>
 </ul>
 </li>
