--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ document.wafxScreenInfos =
 
 	
 
-	<link rel="stylesheet" href="index.css?d25d4e23_960f_421c_8af9_2b33f0de324f_7"/>
+	<link rel="stylesheet" href="index.css?4a922623_34a5_4ca1_bf1b_dfc2a3baf38a_7"/>
 
 	<style>
 
@@ -172,6 +172,9 @@ document.wafxScreenInfos =
 </li>
 <li role="presentation" >
 <a class="wafx-menu-item " role="menuitem" href="./bowshock.html"  >Bow Shock</a>
+</li>
+<li role="presentation" >
+<a class="wafx-menu-item " role="menuitem" href="./planetarium.html"  >Planetarium Show Short</a>
 </li>
 </ul>
 </li>
