--- a/mriturb.html
+++ b/mriturb.html
@@ -65,7 +65,7 @@ document.wafxScreenInfos =
 
 	
 
-	<link rel="stylesheet" href="mriturb.css?2ee2e7b7_8fd7_4884_a015_24c516d866e5_7"/>
+	<link rel="stylesheet" href="mriturb.css?af5f64c5_fc02_451c_9e69_2d4c3e816255_7"/>
 
 	<style>
 
@@ -172,6 +172,9 @@ document.wafxScreenInfos =
 </li>
 <li role="presentation" >
 <a class="wafx-menu-item " role="menuitem" href="./bowshock.html"  >Bow Shock</a>
+</li>
+<li role="presentation" >
+<a class="wafx-menu-item " role="menuitem" href="./planetarium.html"  >Planetarium Show Short</a>
 </li>
 </ul>
 </li>
