--- a/planetarium.html
+++ b/planetarium.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
 	<meta charset="utf-8">
-	<title>Jake Simon - Research Topics</title>
+	<title>Planetarium Show Short</title>
         
 	<meta name="description" content=""/>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
@@ -65,7 +65,7 @@ document.wafxScreenInfos =
 
 	
 
-	<link rel="stylesheet" href="research.css?3acefde6_988c_42b8_875a_474ebeebc15d_7"/>
+	<link rel="stylesheet" href="planetarium.css?9368e5a7_2e0d_456a_8710_aa1f596f7411_7"/>
 
 	<style>
 
@@ -192,27 +192,11 @@ document.wafxScreenInfos =
 <div class="compVis_8"><div  class='comp_8 wafxText '><div class='textShape_1024' style='height:5px;'></div><h3 class="waStyle-46c785bb-4092-4d97-a4ff-af25c24c5eee"><span class="t4"   >Jake Simon</span></h3>
 <h3 class="waStyle-b6cd58d0-1379-4fdb-98e4-f8b73e927107"><span class="t5"   > Assistant Professor</span></h3>
 <h3 class="waStyle-b6cd58d0-1379-4fdb-98e4-f8b73e927107"><span class="t6"   > Iowa State University</span></h3></div></div>
-<div class="compVis_9"><div  class='comp_9 wafxText '><div class='textShape_1024' style='height:5px;'></div><p><span class="t7"  >The Big Picture</span>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p></div></div>
-<div class="compVis_10"><div  class='comp_10 wafxText '><div class='textShape_1024' style='height:5px;'></div><p style="text-align: justify;"><span class="t8"  >Broadly speaking, my research group and I use computational methods to understand complex astrophysical processes relevant to planet formation and disk accretion.  I also enjoy working closely with observers to test my theoretical models with state-of-the-art observations, such as those by the Atacama Large Millimeter/submillimeter Array (ALMA). Each section below explores these various topics in a bit more detail, with movies and images of our latest results.  Enjoy!</span>&nbsp;</p></div></div>
-<div class="compVis_11"><div  class='comp_11 wafxText '><div class='textShape_1024' style='height:5px;'></div><p><span class="t9"  >Protoplanetary Disks</span>&nbsp;</p></div></div>
-<div class="compVis_12"><div  class='comp_12 wafxText '><div class='textShape_1024' style='height:5px;'></div><p><span class="t10"  >Black Hole Accretion</span>&nbsp;</p></div></div>
-<div class="compVis_13"><div  class='comp_13'><iframe style="width:100%;height:100%;border:0px;"  src="//www.youtube.com/embed/3narv0Tt9Lw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"  allowfullscreen></iframe>
+<div class="compVis_9"><div  class='comp_9 wafxText '><div class='textShape_1024' style='height:5px;'></div><p><span class="t7"  >Planetarium Show Short</span>&nbsp;</p>
+<p><span class="t8"  ></span>&nbsp;</p>
+<p style="text-align: justify;"><span class="t9"  >A shortened version of a planetarium show that I helped to produce as part of a collaboration led by the California Academy of Sciences.  The short is named “Simulating Solar System Formation” and features one of my planetesimal formation simulations (affiliation is out of date). The full length planetarium show is titled “Incoming!” and is narrated by George Takei.</span>&nbsp;</p></div></div>
+<div class="compVis_10"><div  class='comp_10'><iframe style="width:100%;height:100%;border:0px;"  src="//www.youtube.com/embed/yXq1i3HlumA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"  allowfullscreen></iframe>
 </div></div>
-<div class="compVis_14"><div  class='comp_14 wafxText '><div class='textShape_1024' style='height:5px;'></div><p style="text-align: justify;"><span class="t11"  >Top-down view of a very strongly magnetized accretion disk around a black hole.  From Mishra et al. (2020)</span>&nbsp;</p></div></div>
-<div class="compVis_15"><div  class='comp_15 wafxText '><div class='textShape_1024' style='height:5px;'></div><p><span class="t12"  >Planetesimal Formation</span><span class="t13"  ></span>&nbsp;</p></div></div>
-<div class="compVis_16"><div  class='comp_16'><iframe style="width:100%;height:100%;border:0px;"  src="//www.youtube.com/embed/gyhcBvxnr_A" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"  allowfullscreen></iframe>
-</div></div>
-<div class="compVis_17"><div  class='comp_17 wafxText '><div class='textShape_1024' style='height:5px;'></div><p style="text-align: justify;"><span class="t14"  >My team and I are also very interested in studying how planetesimals are born.  These objects are the building blocks of fully fledged planets, and yet how exactly they form is one of the outstanding problems in all of planet formation.  We are running sophisticated numerical models of planetesimal formation via a process known as the streaming instability and comparing our results to observations of planetesimals in the Solar System (e.g., Kuiper Belt Objects).</span>&nbsp;</p></div></div>
-<div class="compVis_18"><div  class='comp_18 wafxText '><div class='textShape_1024' style='height:5px;'></div><p style="text-align: justify;"><span class="t15"  >My group is studying how angular momentum is transported in protoplanetary disks (which is necessary for disk gas to accrete onto the central star). Whether such transport is turbulent in nature as has long been thought or driven by largely laminar magnetically launched winds is an open question, yet a crucial one to address given the pivotal role that state of the gas plays in the growth of small particles to larger objects.  We are closely collaborating with observers to test our theoretical models with observations from ALMA and other state-of-the-art facilities.</span>&nbsp;</p></div></div>
-<div class="compVis_19"><div  class='comp_19 wafxText '><div class='textShape_1024' style='height:5px;'></div><p style="text-align: justify;"><span class="t16"  >Planetesimal formation in a pressure bump (from <a href="https://ui.adsabs.harvard.edu/abs/2020arXiv200801727C/abstract" target="_blank"  style="text-decoration: underline; font-style: italic;">Carrera et al. 2020</a>)</span>&nbsp;</p>
-<p style="text-align: justify;"><span class="t17"  ></span>&nbsp;</p></div></div>
-<div class="compVis_20"><div class='comp_20'  title=""><img  class="wafx-img-picture" src="./wafx_res/Images/0-381-Global%20Disk%20-%20Side%20View.jpg" alt=""></div></div>
-<div class="compVis_21"><div class='comp_21'  title=""><img  class="wafx-img-picture" src="./wafx_res/Images/0-303-Screen%20Shot%202020-10-01%20at%203.09.36%20PM.png" alt=""></div></div>
-<div class="compVis_22"><div  class='comp_22 wafxText '><div class='textShape_1024' style='height:5px;'></div><p style="text-align: justify;"><span class="t18"  ><i>Magnetic field lines and strength (in terms of beta = thermal energy/magnetic energy) at 100 AU in a model protoplanetary disk. From <a href="https://ui.adsabs.harvard.edu/abs/2018ApJ...865...10S/abstract" target="_blank"  style="text-decoration: underline; font-style: italic;">Simon et al. (2018)</a>.</i></span>&nbsp;</p>
-<p style="text-align: justify;"><span class="t19"  ></span>&nbsp;</p></div></div>
-<div class="compVis_23"><div  class='comp_23 wafxText '><div class='textShape_1024' style='height:5px;'></div><p style="text-align: justify;"><span class="t20"  >I also study accretion disks around black holes.  Observations of these disks also reveal that they are accreting their gas onto the central black hole, a process which powers some of the most luminous objects in the entire Universe.  However, similar to their lower energy cousins, protoplanetary disks, exactly how this accretion proceeds is not completely understood.  Working with Mitch Begelman and collaborators, I am investigating the effect of magnetic fields on this accretion process.  We have recently found that strong magnetic fields lead to a very non-uniform structure to black hole accretion disks (see movie to the right).</span>&nbsp;</p></div></div>
 
 
 
